# aiPolaris

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/commands/: challenge-security.md  gcch-check.md  new-adr.md  new-agent-node.md  new-eval-case.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/workflows/: ci.yml  deploy.yml  release-record.yml  release.yml
agent/: graph.py  state.py
agent/memory/: session.py
agent/nodes/: planner.py  retriever.py  synthesizer.py
agent/prompts/: planner_system.txt  retriever_system.txt  synthesizer_system.txt
agent/tools/: manifests.py
api/: config.py  main.py  schemas.py
api/middleware/: auth.py  rbac.py
api/routers/: health.py  ingest.py  query.py
docs/: insight-ai-engineer-application.md  interview-walkthrough.md  jd-coverage-assessment.md  presentation-walkthrough.md  presenting-aipolaris.md  qa-review.md  story-flow.md  system-boundary.md  use-cases.md
docs/adr/: ADR-001-langgraph-framework.md  ADR-002-read-only-agents.md  ADR-003-gcch-terraform-workspaces.md  ADR-004-trace-context.md  ADR-005-chunking-strategy.md  ADR-006-session-memory.md  ADR-007-streaming-responses.md  ADR-008-prompt-hash-pinning.md  ADR-009-env-scoped-endpoints.md  ADR-010-agent-spec-export.md  (+1 more)
eval/: golden_questions.json  golden_questions_smoke.json  run_eval.py
release_records/: 2026-04-11T21:53:37Z_f3b04f7c.yaml  agent-spec.yaml
scripts/: check_eval_thresholds.py  check_prompts.py  generate_release_record.py  update_prompts_lock.py
(+31 files in other folders)
