[build-system]
requires = ["setuptools>=68,<82", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*", "api*", "pipeline*"]

[project]
name = "aipolaris"
version = "0.1.0"
description = "Production-grade agentic RAG — LangGraph, Graph API, ADLS, Azure AI Search, GCCH-ready"
requires-python = ">=3.12"
authors = [
    {name = "Prasad Tiruveedi", email = "prasad@vplsolutions.com"},
]
maintainers = [
    {name = "Prasad Tiruveedi", email = "tvprasad@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "openai>=1.35.0",
    "azure-identity>=1.17.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-storage-file-datalake>=12.15.0",
    "azure-search-documents>=11.6.0",
    "msal>=1.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.8",
    "pip-audit>=2.7.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.bandit]
skips = ["B101"]  # allow assert in tests
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
